@@ -7708,7 +7708,7 @@ int ExecutiveRevalence(PyMOLGlobals *G,char *s1,char *s2,char *src,
       ok=false;
       if(!quiet) {
         PRINTFB(G,FB_Editor,FB_Warnings)
-          "Editor-Warning: revalence only works on atoms in a single object at a time."
+          "Editor-Warning: revalence can only target single object at a time."
           ENDFB(G);
       }
     }
@@ -7716,7 +7716,28 @@ int ExecutiveRevalence(PyMOLGlobals *G,char *s1,char *s2,char *src,
     if(src && (!src[0])) src=NULL;
     
     if(ok) {
-      if(!src) { /* guess valences */
+      if(src) {
+        int sele3=SelectorIndexByName(G,src);
+        if(sele3>=0) {
+          ObjectMolecule *obj3 = SelectorGetSingleObjectMolecule(G,sele3);
+          if(!obj3) {
+            ok=false;
+            PRINTFB(G,FB_Editor,FB_Errors)
+              "Editor-Warning: revalence can only source a single object at a time."
+              ENDFB(G);
+          } else if(obj3==obj1) {
+            ok=false;
+            PRINTFB(G,FB_Editor,FB_Errors)
+              "Editor-Warning: target and source must be different objects."
+              ENDFB(G);
+          } else {
+            if(ObjectMoleculeXferValences(obj1,sele1,sele2,target_state,obj3,sele3,source_state,quiet)) {
+              ObjectMoleculeVerifyChemistry(obj1,target_state);
+              ObjectMoleculeInvalidate(obj1,cRepAll,cRepInvBonds,target_state);
+            }
+          }
+        }
+      } else { /* guess valences */
         int *flag1 = Calloc(int,obj1->NAtom);
         int *flag2 = Calloc(int,obj1->NAtom);
         if(flag1&&flag2) {
@@ -7733,7 +7754,6 @@ int ExecutiveRevalence(PyMOLGlobals *G,char *s1,char *s2,char *src,
           ObjectMoleculeGuessValences(obj1,target_state,flag1,flag2,reset);
           ObjectMoleculeVerifyChemistry(obj1,target_state);
           ObjectMoleculeInvalidate(obj1,cRepAll,cRepInvBonds,target_state);
-
         }
         FreeP(flag1);
         FreeP(flag2);
